--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/sortablejs": "^1.15.8",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
@@ -23,6 +24,7 @@
     "axios": "^1.6.8",
     "less": "^4.0.0",
     "less-loader": "^8.0.0",
-    "typescript": "~4.5.5"
+    "typescript": "~4.5.5",
+    "vuedraggable": "^4.1.0"
   }
 }
